Fixed docker compose functionality

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,8 +1,14 @@
-FROM python:alpine
+FROM python:3.13.1-alpine
 
 WORKDIR /code
+
+# Install system dependencies
+RUN apk add --no-cache gcc musl-dev libffi-dev ffmpeg opus-dev
+
+COPY requirements.txt .
+
 RUN --mount=type=cache,target=/root/.cache/pip \
-    pip3 install discord pynacl yt-dlp spotipy
+    pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
